Fix view sponsor by event

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "tailwindcss": "^3.4.1",
+    "toast": "^0.5.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
