--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
   },
   "scripts": {
     "start": "npm install && react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm install && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "npm run build"
   },
   "eslintConfig": {
     "extends": [
