--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "flowbite-react": "^0.7.2",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
+    "react-custom-roulette": "^1.4.1",
     "react-datepicker": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
