--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "date-fns": "^3.3.1",
     "flowbite-react": "^0.7.2",
     "postcss": "^8.4.35",
@@ -54,5 +55,6 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
