--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.15",
@@ -16,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
+    "boxicons": "^2.1.4",
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
     "flowbite-react": "^0.7.2",
